# beammech

./: .gitattributes  .gitignore  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  README.txt  beammech.in.py  beammech.py  pylama.ini  pyproject.toml  setup.in.py  setup.py  xsec.py
doc/: driehoek-last.ps
src/: beammech.py
src/beammech/: __init__.py  beammech.py
tests/: AD5.py  general.py  pointload.py  test_EI.py  test_helpers.py  test_loads.py
tools/: genbackup  post-commit
